@@ -4,6 +4,9 @@ Griffith ChangeLog
 ------------------
 (c) 2005-2007  Vasco Nunes, Piotr Ożarowski
 
+2007-11-08  Michael Jahn
+	* status bar shows count of movies after applying a filter
+
 2007-10-15  Michael Jahn
 	* Kino.de plugin updated
 	* Fetch from Amazon function fixed
